--- a/package.json
+++ b/package.json
@@ -1,12 +1,25 @@
 {
   "name": "@mengzhouaws/semantic-demo",
-  "version": "1.0.0",
+  "version": "0.0.0-development",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "semantic-release": "semantic-release"
+  },
+  "repository": {
+    "url": "https://github.com/mengzhou44/semantic-demo",
+    "type": "git"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "semantic-release": "^18.0.1"
+  },
+  "release": {
+    "branches": [
+      "master"
+    ]
+  }
 }
