--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "semantic-release": "semantic-release",
+    "publish": "npm-publish --token=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  ./package.json",
     "commit": "cz"
   },
   "repository": {
