--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,5 +21,5 @@ jobs:
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: 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
+          NPM_TOKEN: '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'
         run: npx semantic-release
